# WAKE-Implementation-Master

./: Cargo.toml  README.md  lcov.info
src/: lib.rs  main.rs  utility.rs
src/benchmarks/: benchmarking.rs  plotting_all.py  plotting_protocol.py  plotting_sign_and_session_auth_and_verification.py  plotting_sizes.py
src/benchmarks/data/: all_protocol_executions_data.txt  all_sign_and_verify_data.txt  optimized_and_compiler_output.csv  sign_and_verify_outputs.csv  signature_sizes.csv
src/benchmarks/protocol_time_predictions/: protocol_time_predictions.txt
src/proof_systems/: discrete_log_knowledege_proof.rs  mod.rs  proof_system_gm17.rs  range_proof.rs
src/protocols/: mod.rs
src/protocols/burmester_desmedt/: key_exchange.rs
src/protocols/compiler_bp_wake/: compiler_bp_wake_protocol.rs  compiler_bp_wake_signature.rs  mod.rs
src/protocols/compiler_gm17_wake/: compiler_gm17_wake_protocol.rs  compiler_gm17_wake_signature.rs  mod.rs
src/protocols/optimized_bp_wake/: mod.rs  optimized_bp_wake_protocol.rs  optimized_bp_wake_signature_and_session_authentication.rs
src/protocols/optimized_gm17_wake/: mod.rs  optimized_gm17_wake_protocol.rs  optimized_gm17_wake_signature_and_session_authentication.rs
tests/: mod.rs
tests/proof_systems/: mod.rs  test_dl_knowledge_proof.rs  test_proof_system_gm17.rs  test_range_proof.rs
tests/protocols/: mod.rs  test_bp_compiler_wake.rs  test_bp_optimized_wake.rs  test_gm17_compiler_wake.rs  test_gm17_optimized_wake.rs  test_key_exchange_dalek.rs
