[package]
name = "wake-implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
# arkworks imports https://github.com/arkworks-rs 
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-gm17 = "0.3.0"

# bulletproof-related imports https://github.com/zkcrypto/bulletproofs
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"

# general utility imports
rand = "0.8.5"
sha2 = "0.10.6"
num = "0.4.0"
merlin = "3.0.0"
hex = "0.4.3"
csv = "1.2.1"
lazy_static = "1.4.0" 
num-bigint = "0.4.3"

